before iis sandbox integration tentative

--- a/src/main/webapp/WEB-INF/templates/tmpl-home-welcome.html
+++ b/src/main/webapp/WEB-INF/templates/tmpl-home-welcome.html
@@ -2,10 +2,12 @@
 <html lang="en">
 	<div th:fragment="banner" class="well">
 		<p>
-			This server provides a complete implementation of the FHIR Specification
+			This server uses a HAPI fhir JPA database which provides a complete implementation of the FHIR Specification
 			using a 100% open source software stack.
 		</p>
 		<p>
+			This project was developed by AIRA and NIST.
+
 			This server is built
 			from a number of modules of the
 			<a href="https://github.com/jamesagnew/hapi-fhir/">HAPI FHIR</a>
