--- a/src/main/webapp/WEB-INF/templates/tmpl-banner.html
+++ b/src/main/webapp/WEB-INF/templates/tmpl-banner.html
@@ -3,7 +3,10 @@
 <div th:fragment="banner">
 	<div class="row">
 		<div class="col-md-8">
-			<img src="img/sample-logo.jpg" width="383" alt="Sample Logo" />
+			<img src="img/nist_logo.png" width="383" alt="NIST Logo" />
+		</div>
+		<div class="col-md-8">
+			<img src="img/aira_logo.webp" width="383" alt="AIRA Logo" />
 		</div>
 		<div class="col-md-4">
 			<img src="img/hapi_fhir_banner_right.png" align="right" />
